Modifications to PNA-X and Cal Manager, Lakeshore operational. TrenFinder and Tiime Domain created

--- a/SQE_Keysight_PNA_X_N5241B/SQE_Keysight_PNA_X_N5241B.ini
+++ b/SQE_Keysight_PNA_X_N5241B/SQE_Keysight_PNA_X_N5241B.ini
@@ -139,21 +139,21 @@ def_value: False
 section: Response
 group: Signals
 
-[A_2 - Enabled]
+[A_0 - Enabled]
 label: Receiver A IN - Enabled
 datatype: BOOLEAN
 def_value: False
 section: Response
 group: Signals
-tooltip: Power on receiver A when power is output by port 2
+tooltip: Power on receiver A
 
-[B_1 - Enabled]
+[B_0 - Enabled]
 label: Receiver B IN - Enabled
 datatype: BOOLEAN
 def_value: False
 section: Response
 group: Signals
-tooltip: Power on receiver B when power is output by port 1
+tooltip: Power on receiver B
 
 [Autoscale All]
 datatype: BUTTON
@@ -211,7 +211,7 @@ permission: READ
 section: Response
 group: Signals
 
-[A_2]
+[A_0]
 label: Receiver A IN
 x_name: Frequency
 x_unit: Hz
@@ -220,9 +220,9 @@ datatype: VECTOR
 permission: READ
 section: Response
 group: Signals
-tooltip: Power on receiver A when power is output by port 2
+tooltip: Power on receiver A
 
-[B_1]
+[B_0]
 label: Receiver B IN
 x_name: Frequency
 x_unit: Hz
@@ -231,7 +231,7 @@ datatype: VECTOR
 permission: READ
 section: Response
 group: Signals
-tooltip: Power on receiver B when power is output by port 1
+tooltip: Power on receiver B
 
 [S11 - Value]
 datatype: COMPLEX
