--- a/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
+++ b/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
@@ -1540,128 +1540,126 @@ section: Advanced settings
 # state_value_1: True
 
 
-; # Temperature Control (to do)
+# Temperature Control (to do)
 
-; [Temperature Setpoint]
-; datatype: DOUBLE
-; def_value: 0
-; unit: K
-; set_cmd: SETP
-; get_cmd: SETP?
-; group: Control
-; section: Advanced settings
+[Temperature Setpoint]
+datatype: DOUBLE
+def_value: 0
+unit: K
+#set_cmd: SETP
+#get_cmd: SETP?
+section: Temperature Control
 
-; [Temperature Ramp]
-; datatype: COMBO
-; def_value: Off
-; combo_def_1: Off
-; combo_def_2: On
-; cmd_def_1: 0
-; cmd_def_2: 1
-; group: Control
-; section: Advanced settings
 
-; [Temperature Ramp Rate]
-; datatype: DOUBLE
-; def_value: 0.001
-; low_lim: 0.001
-; high_lim: 10
-; unit: K/min
-; state_quant: Temperature Ramp
-; state_value_1: On
-; group: Control
-; section: Advanced settings
+[Temperature Ramp]
+datatype: COMBO
+def_value: Off
+combo_def_1: Off
+combo_def_2: On
+cmd_def_1: 0
+cmd_def_2: 1
+section: Temperature Control
 
-; [Heater Output]
-; name: Heater Output
-; datatype: DOUBLE
-; permission: READ
-; get_cmd: HTR?
-; unit: %
-; group: Control
-; section: Advanced settings
 
-; [Heater Range]
-; name: Heater Range
-; datatype: COMBO
-; def_value: Off
-; combo_def_1: Off
-; combo_def_2: 31.6 uA
-; combo_def_3: 100 uA
-; combo_def_4: 316 uA
-; combo_def_5: 1.00 mA
-; combo_def_6: 3.16 mA
-; combo_def_7: 10.0 mA
-; combo_def_8: 31.6 mA
-; combo_def_9: 100 mA
-; cmd_def_1: 0
-; cmd_def_2: 1
-; cmd_def_3: 2
-; cmd_def_4: 3
-; cmd_def_5: 4
-; cmd_def_6: 5
-; cmd_def_7: 6
-; cmd_def_8: 7
-; cmd_def_9: 8
-; get_cmd: HTRRNG?
-; group: Control
-; section: Advanced settings
+[Temperature Ramp Rate]
+datatype: DOUBLE
+def_value: 0.001
+low_lim: 0.001
+high_lim: 10
+unit: K/min
+state_quant: Temperature Ramp
+state_value_1: On
+section: Temperature Control
 
-; [Temperature Control Mode]
-; datatype: COMBO
-; def_value: Closed loop PID
-; combo_def_1: Closed loop PID
-; combo_def_2: Zone Tuning
-; combo_def_3: Open Loop
-; combo_def_4: Off
-; cmd_def_1: 1
-; cmd_def_2: 2
-; cmd_def_3: 3
-; cmd_def_4: 4
-; set_cmd: CMODE
-; group: Control
-; section: Advanced settings
 
-; [Common Mode Reduction]
-; datatype: COMBO
-; def_value: Off
-; combo_def_1: Off
-; combo_def_2: On
-; cmd_def_1: 0
-; cmd_def_2: 1
-; set_cmd: CMR
-; group: Control
-; section: Advanced settings
+[Heater Output]
+name: Heater Output
+datatype: DOUBLE
+permission: READ
+get_cmd: HTR?
+unit: %
+section: Temperature Control
 
-; [P - Proportional]
-; datatype: DOUBLE
-; low_lim: 1E-3
-; high_lim: 1E3
-; def_value: 10
-; unit:
-; state_quant: Temperature Control Mode
-; state_value_1: Closed loop PID
-; group: Control
-; section: Advanced settings
 
-; [I - Integral]
-; datatype: DOUBLE
-; low_lim: 0
-; high_lim: 1E4
-; def_value: 100
-; unit: s
-; state_quant: Temperature Control Mode
-; state_value_1: Closed loop PID
-; group: Control
-; section: Advanced settings
+[Heater Range]
+name: Heater Range
+datatype: COMBO
+def_value: Off
+combo_def_1: Off
+combo_def_2: 31.6 uA
+combo_def_3: 100 uA
+combo_def_4: 316 uA
+combo_def_5: 1.00 mA
+combo_def_6: 3.16 mA
+combo_def_7: 10.0 mA
+combo_def_8: 31.6 mA
+combo_def_9: 100 mA
+cmd_def_1: 0
+cmd_def_2: 1
+cmd_def_3: 2
+cmd_def_4: 3
+cmd_def_5: 4
+cmd_def_6: 5
+cmd_def_7: 6
+cmd_def_8: 7
+cmd_def_9: 8
+get_cmd: HTRRNG?
+section: Temperature Control
 
-; [D - Derivative]
-; datatype: DOUBLE
-; low_lim: 0
-; high_lim: 2.5E3
-; def_value: 20
-; unit: s
-; state_quant: Temperature Control Mode
-; state_value_1: Closed loop PID
-; group: Control
-; section: Advanced settings
+
+[Temperature Control Mode]
+datatype: COMBO
+def_value: Closed loop PID
+combo_def_1: Closed loop PID
+combo_def_2: Zone Tuning
+combo_def_3: Open Loop
+combo_def_4: Off
+cmd_def_1: 1
+cmd_def_2: 2
+cmd_def_3: 3
+cmd_def_4: 4
+set_cmd: CMODE
+section: Temperature Control
+
+
+[Common Mode Reduction]
+datatype: COMBO
+def_value: Off
+combo_def_1: Off
+combo_def_2: On
+cmd_def_1: 0
+cmd_def_2: 1
+set_cmd: CMR
+section: Temperature Control
+
+
+[P - Proportional]
+datatype: DOUBLE
+low_lim: 1E-3
+high_lim: 1E3
+def_value: 10
+state_quant: Temperature Control Mode
+state_value_1: Closed loop PID
+section: Temperature Control
+
+
+[I - Integral]
+datatype: DOUBLE
+low_lim: 0
+high_lim: 1E4
+def_value: 100
+unit: s
+state_quant: Temperature Control Mode
+state_value_1: Closed loop PID
+section: Temperature Control
+
+
+[D - Derivative]
+datatype: DOUBLE
+low_lim: 0
+high_lim: 2.5E3
+def_value: 20
+unit: s
+state_quant: Temperature Control Mode
+state_value_1: Closed loop PID
+section: Temperature Control
