drivers before lakeshore major update

--- a/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
+++ b/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
@@ -238,6 +238,15 @@ state_quant: Show Ch 1
 state_value_1: True
 group: Ch 1
 
+[Quick temperature 1]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 1
+state_value_1: True
+group: Ch 1
+# get_cmd: RDGK? 1
+
 [Resistance 1]
 datatype: DOUBLE
 permission: READ
@@ -395,6 +404,15 @@ unit: K
 state_quant: Show Ch 2
 state_value_1: True
 group: Ch 2
+
+[Quick temperature 2]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 2
+state_value_1: True
+group: Ch 2
+# get_cmd: RDGK? 2
 
 [Resistance 2]
 datatype: DOUBLE
@@ -554,6 +572,15 @@ state_quant: Show Ch 3
 state_value_1: True
 group: Ch 3
 
+[Quick temperature 3]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 3
+state_value_1: True
+group: Ch 3
+# get_cmd: RDGK? 3
+
 [Resistance 3]
 datatype: DOUBLE
 permission: READ
@@ -711,6 +738,15 @@ unit: K
 state_quant: Show Ch 4
 state_value_1: True
 group: Ch 4
+
+[Quick temperature 4]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 1
+state_value_1: True
+group: Ch 4
+# get_cmd: RDGK? 4
 
 [Resistance 4]
 datatype: DOUBLE
@@ -870,6 +906,15 @@ state_quant: Show Ch 5
 state_value_1: True
 group: Ch 5
 
+[Quick temperature 5]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 5
+state_value_1: True
+group: Ch 5
+# get_cmd: RDGK? 5
+
 [Resistance 5]
 datatype: DOUBLE
 permission: READ
@@ -1027,6 +1072,15 @@ unit: K
 state_quant: Show Ch 6
 state_value_1: True
 group: Ch 6
+
+[Quick temperature 6]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 6
+state_value_1: True
+group: Ch 6
+# get_cmd: RDGK? 6
 
 [Resistance 6]
 datatype: DOUBLE
@@ -1186,6 +1240,15 @@ state_quant: Show Ch 7
 state_value_1: True
 group: Ch 7
 
+[Quick temperature 7]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 7
+state_value_1: True
+group: Ch 7
+# get_cmd: RDGK? 7
+
 [Resistance 7]
 datatype: DOUBLE
 permission: READ
@@ -1343,6 +1406,15 @@ unit: K
 state_quant: Show Ch 8
 state_value_1: True
 group: Ch 8
+
+[Quick temperature 8]
+datatype: DOUBLE
+permission: READ
+unit: K
+state_quant: Show Ch 8
+state_value_1: True
+group: Ch 8
+# get_cmd: RDGK? 8
 
 [Resistance 8]
 datatype: DOUBLE
@@ -1571,14 +1643,22 @@ state_quant: Temperature Ramp
 state_value_1: On
 section: Temperature Control
 
+; [Heater resistance]
+; datatype: DOUBLE
+; unit: Ohm
+; section: Temperature Control
+; low_lim: 10
+; high_lim: 5000
+; def_value: 100
 
-[Heater Output]
-name: Heater Output
-datatype: DOUBLE
-permission: READ
-get_cmd: HTR?
-unit: %
-section: Temperature Control
+
+; [Heater Output]
+; name: Heater Output
+; datatype: DOUBLE
+; permission: READ
+; #get_cmd: HTR?
+; unit: W
+; section: Temperature Control
 
 
 [Heater Range]
@@ -1594,16 +1674,6 @@ combo_def_6: 3.16 mA
 combo_def_7: 10.0 mA
 combo_def_8: 31.6 mA
 combo_def_9: 100 mA
-cmd_def_1: 0
-cmd_def_2: 1
-cmd_def_3: 2
-cmd_def_4: 3
-cmd_def_5: 4
-cmd_def_6: 5
-cmd_def_7: 6
-cmd_def_8: 7
-cmd_def_9: 8
-get_cmd: HTRRNG?
 section: Temperature Control
 
 
