--- a/SQE_VIRTUAL_SignalProcessor/SQE_VIRTUAL_SignalProcessor.ini
+++ b/SQE_VIRTUAL_SignalProcessor/SQE_VIRTUAL_SignalProcessor.ini
@@ -57,6 +57,15 @@ combo_def_2: Complex
 def_value: Complex
 group: Input
 
+[Input class]
+datatype: COMBO
+combo_def_1: dB
+combo_def_2: dBm
+combo_def_3: Power quantity in linear scale
+combo_def_4: Root-power quantity in linear scale
+def_value: dB
+group: Input
+
 [Real input]
 label: Input
 datatype: VECTOR
