sample heater completely functional

--- a/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
+++ b/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
@@ -96,6 +96,16 @@ tcpip_port: 7777
 #   sweep_cmd:     Command used to sweep data. Use <sr> for sweep rate, and <*> for the value.
 #   get_cmd:       Command used to get the data from the instrument. Default is set_cmd?
 
+[Common Mode Reduction]
+label: Common Mode Reduction
+datatype: COMBO
+def_value: Off
+combo_def_1: Off
+combo_def_2: On
+cmd_def_1: 0
+cmd_def_2: 1
+set_cmd: CMR
+
 
 # Channel 1
 
@@ -103,6 +113,25 @@ tcpip_port: 7777
 datatype: BOOLEAN
 def_value: True
 group: Ch 1
+
+[Sensor Name 1]
+datatype: STRING
+group: Ch 1
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 1
+state_value_1: True
+
+; [Preferred Units 1]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 1
+; state_quant: Show Ch 1
 
 [Excitation Mode 1]
 datatype: COMBO
@@ -271,6 +300,25 @@ datatype: BOOLEAN
 def_value: True
 group: Ch 2
 
+[Sensor Name 2]
+datatype: STRING
+group: Ch 2
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 2
+state_value_1: True
+
+; [Preferred Units 2]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 2
+; state_quant: Show Ch 2
+
 [Excitation Mode 2]
 datatype: COMBO
 def_value: Voltage
@@ -437,6 +485,25 @@ group: Ch 2
 datatype: BOOLEAN
 def_value: False
 group: Ch 3
+
+[Sensor Name 3]
+datatype: STRING
+group: Ch 3
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 3
+state_value_1: True
+
+; [Preferred Units 3]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 3
+; state_quant: Show Ch 3
 
 [Excitation Mode 3]
 datatype: COMBO
@@ -605,6 +672,25 @@ datatype: BOOLEAN
 def_value: False
 group: Ch 4
 
+[Sensor Name 4]
+datatype: STRING
+group: Ch 4
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 4
+state_value_1: True
+
+; [Preferred Units 4]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 4
+; state_quant: Show Ch 4
+
 [Excitation Mode 4]
 datatype: COMBO
 def_value: Voltage
@@ -771,6 +857,25 @@ group: Ch 4
 datatype: BOOLEAN
 def_value: True
 group: Ch 5
+
+[Sensor Name 5]
+datatype: STRING
+group: Ch 5
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 5
+state_value_1: True
+
+; [Preferred Units 5]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 5
+; state_quant: Show Ch 5
 
 [Excitation Mode 5]
 datatype: COMBO
@@ -939,6 +1044,25 @@ datatype: BOOLEAN
 def_value: True
 group: Ch 6
 
+[Sensor Name 6]
+datatype: STRING
+group: Ch 6
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 6
+state_value_1: True
+
+; [Preferred Units 6]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 6
+; state_quant: Show Ch 6
+
 [Excitation Mode 6]
 datatype: COMBO
 def_value: Voltage
@@ -1106,6 +1230,25 @@ datatype: BOOLEAN
 def_value: False
 group: Ch 7
 
+[Sensor Name 7]
+datatype: STRING
+group: Ch 7
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 7
+state_value_1: True
+
+; [Preferred Units 7]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 7
+; state_quant: Show Ch 7
+
 [Excitation Mode 7]
 datatype: COMBO
 def_value: Voltage
@@ -1272,6 +1415,25 @@ group: Ch 7
 datatype: BOOLEAN
 def_value: False
 group: Ch 8
+
+[Sensor Name 8]
+datatype: STRING
+group: Ch 8
+tooltip: It will appear on the front panel display, when possible, to identify the sensor information being displayed.
+state_quant: Show Ch 8
+state_value_1: True
+
+; [Preferred Units 8]
+; datatype: COMBO
+; def_value: K
+; combo_def_1: K
+; combo_def_2: Ohm
+; cmd_def_1: 1
+; cmd_def_2: 2
+; tooltip: Preferred units for sensor readings and for the control setpoint
+; state_value_1: True
+; group: Ch 8
+; state_quant: Show Ch 8
 
 [Excitation Mode 8]
 datatype: COMBO
@@ -1551,185 +1713,150 @@ cmd_def_2: 2
 group: Upload Temperature Response Curve
 section: Advanced settings
 
-##############
-# TRIGGERING #
-##############
 
-# [Enable trigger 1]
-# datatype: BOOLEAN
-# group: Trigger quantities
-# section: Triggering
-# def_value: False
+#######################
+# TEMPERATURE CONTROL #
+#######################
 
-# [Trigger quantity 1]
-# datatype: DOUBLE
-# group: Trigger quantities
-# section: Triggering
-# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
-# state_quant: Enable trigger 1
-# state_value_1: True
+# Sample heater
 
-# [Enable trigger 2]
-# datatype: BOOLEAN
-# group: Trigger quantities
-# section: Triggering
-# def_value: False
+; [Sample Heater Resistance]
+; label: Resistance
+; datatype: DOUBLE
+; unit: Ohm
+; section: Temperature Control
+; group: Sample Heater
+; low_lim: 1
+; high_lim: 2000
+; def_value: 100
 
-# [Trigger quantity 2]
-# datatype: DOUBLE
-# group: Trigger quantities
-# section: Triggering
-# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
-# state_quant: Enable trigger 2
-# state_value_1: True
-
-# [Enable trigger 3]
-# datatype: BOOLEAN
-# group: Trigger quantities
-# section: Triggering
-# def_value: False
-
-# [Trigger quantity 3]
-# datatype: DOUBLE
-# group: Trigger quantities
-# section: Triggering
-# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
-# state_quant: Enable trigger 3
-# state_value_1: True
-
-# [Enable trigger 4]
-# datatype: BOOLEAN
-# group: Trigger quantities
-# section: Triggering
-# def_value: False
-
-# [Trigger quantity 4]
-# datatype: DOUBLE
-# group: Trigger quantities
-# section: Triggering
-# tooltip: Create a signal connection with a step parameters that has to trigger a new instrument acquisition 
-# state_quant: Enable trigger 4
-# state_value_1: True
-
-
-# Temperature Control (to do)
-
-[Temperature Setpoint]
-datatype: DOUBLE
-def_value: 0
-unit: K
-#set_cmd: SETP
-#get_cmd: SETP?
-section: Temperature Control
-
-
-[Temperature Ramp]
+[Sample Heater Input Channel]
+label: Input Channel
 datatype: COMBO
-def_value: Off
+def_value: 5
+combo_def_1: 1
+combo_def_2: 2
+combo_def_3: 3
+combo_def_4: 4
+combo_def_5: 5
+combo_def_6: 6
+combo_def_7: 7
+combo_def_8: 8
+section: Temperature Control
+group: Sample Heater
+
+[Sample Heater Temperature Ramp]
+label: Temperature Ramp
+datatype: COMBO
 combo_def_1: Off
 combo_def_2: On
 cmd_def_1: 0
 cmd_def_2: 1
+def_value: Off
 section: Temperature Control
+group: Sample Heater
 
-
-[Temperature Ramp Rate]
+[Sample Heater Temperature Ramp Rate]
+label: Temperature Ramp Rate
 datatype: DOUBLE
 def_value: 0.001
 low_lim: 0.001
 high_lim: 10
 unit: K/min
-state_quant: Temperature Ramp
+state_quant: Sample Heater Temperature Ramp
 state_value_1: On
 section: Temperature Control
+group: Sample Heater
 
-; [Heater resistance]
-; datatype: DOUBLE
-; unit: Ohm
-; section: Temperature Control
-; low_lim: 10
-; high_lim: 5000
-; def_value: 100
-
-
-; [Heater Output]
-; name: Heater Output
-; datatype: DOUBLE
-; permission: READ
-; #get_cmd: HTR?
-; unit: W
-; section: Temperature Control
-
-
-[Heater Range]
+[Sample Heater Power Range]
+label: Power Range
 name: Heater Range
 datatype: COMBO
 def_value: Off
 combo_def_1: Off
-combo_def_2: 31.6 uA
-combo_def_3: 100 uA
-combo_def_4: 316 uA
-combo_def_5: 1.00 mA
-combo_def_6: 3.16 mA
-combo_def_7: 10.0 mA
-combo_def_8: 31.6 mA
-combo_def_9: 100 mA
+combo_def_2: 100 nW 
+combo_def_3: 1 uW
+combo_def_4: 10 uW
+combo_def_5: 100 uW
+combo_def_6: 1 mW
+combo_def_7: 10 mW
+combo_def_8: 100 mW
+combo_def_9: 1 W
 section: Temperature Control
+group: Sample Heater
+tooltip: Assuming heater resistance to be 100 Ohm
 
 
-[Temperature Control Mode]
+[Sample Heater Temperature Control Mode]
+label: Temperature Control Mode
 datatype: COMBO
-def_value: Closed loop PID
-combo_def_1: Closed loop PID
-combo_def_2: Zone Tuning
-combo_def_3: Open Loop
-combo_def_4: Off
-cmd_def_1: 1
-cmd_def_2: 2
-cmd_def_3: 3
-cmd_def_4: 4
-set_cmd: CMODE
+def_value: Closed loop (PID)
+combo_def_1: Closed loop (PID)
+combo_def_2: Open Loop (Manual)
+combo_def_3: Off
 section: Temperature Control
+group: Sample Heater
 
 
-[Common Mode Reduction]
-datatype: COMBO
-def_value: Off
-combo_def_1: Off
-combo_def_2: On
-cmd_def_1: 0
-cmd_def_2: 1
-set_cmd: CMR
-section: Temperature Control
-
-
-[P - Proportional]
+[Sample Heater P - Proportional]
+label: P - Proportional
 datatype: DOUBLE
 low_lim: 1E-3
 high_lim: 1E3
 def_value: 10
-state_quant: Temperature Control Mode
-state_value_1: Closed loop PID
+state_quant: Sample Heater Temperature Control Mode
+state_value_1: Closed loop (PID)
 section: Temperature Control
+group: Sample Heater
 
 
-[I - Integral]
+[Sample Heater I - Integral]
+label:  I - Integral
 datatype: DOUBLE
 low_lim: 0
 high_lim: 1E4
 def_value: 100
 unit: s
-state_quant: Temperature Control Mode
-state_value_1: Closed loop PID
+state_quant: Sample Heater Temperature Control Mode
+state_value_1: Closed loop (PID)
 section: Temperature Control
+group: Sample Heater
 
-
-[D - Derivative]
+[Sample Heater D - Derivative]
+label: D - Derivative
 datatype: DOUBLE
 low_lim: 0
 high_lim: 2.5E3
 def_value: 20
 unit: s
-state_quant: Temperature Control Mode
-state_value_1: Closed loop PID
+state_quant: Sample Heater Temperature Control Mode
+state_value_1: Closed loop (PID)
 section: Temperature Control
+group: Sample Heater
+
+[Sample Heater Temperature Setpoint]
+label: Temperature Setpoint
+datatype: DOUBLE
+def_value: 0
+unit: K
+section: Temperature Control
+state_quant: Sample Heater Temperature Control Mode
+state_value_1: Closed loop (PID)
+group: Sample Heater
+
+[Sample Heater Manual Output Power]
+label: Heater Manual Output Power
+datatype: DOUBLE
+unit: W
+section: Temperature Control
+group: Sample Heater
+state_quant: Sample Heater Temperature Control Mode
+state_value_1: Open Loop (Manual)
+
+[Sample Heater Output Power]
+label: Heater Output Power
+datatype: DOUBLE
+permission: READ
+section: Temperature Control
+group: Sample Heater
+unit: W
