Consolidamento di GitHub con PC

--- a/SQE_Agilent_SpectrumAnalyzer/SQE_Agilent_SpectrumAnalyzer.ini
+++ b/SQE_Agilent_SpectrumAnalyzer/SQE_Agilent_SpectrumAnalyzer.ini
@@ -170,6 +170,12 @@ group: Horizontal
 model_value_1: HP E44xx
 model_value_2: N90xx
 
+[Max hold]
+datatype: BOOLEAN
+def_value: False
+set_cmd: :SENS:OBW:MAXH
+group: Acquisition
+
 [IF bandwidth]
 datatype: DOUBLE
 def_value: 10E3
