--- a/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
+++ b/SQE_Lakeshore_37xAC/SQE_LakeShore_37xAC.ini
@@ -267,14 +267,14 @@ state_quant: Show Ch 1
 state_value_1: True
 group: Ch 1
 
-[Quick temperature 1]
+[Quick Temperature 1]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 1
 state_value_1: True
 group: Ch 1
-# get_cmd: RDGK? 1
+get_cmd: RDGK? 1
 
 [Resistance 1]
 datatype: DOUBLE
@@ -283,6 +283,15 @@ unit: Ohm
 state_quant: Show Ch 1
 state_value_1: True
 group: Ch 1
+
+[Quick Resistance 1]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 1
+state_value_1: True
+group: Ch 1
+get_cmd: RDGR? 1
 
 [Excitation Power 1]
 datatype: DOUBLE
@@ -453,16 +462,25 @@ state_quant: Show Ch 2
 state_value_1: True
 group: Ch 2
 
-[Quick temperature 2]
+[Quick Temperature 2]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 2
 state_value_1: True
 group: Ch 2
-# get_cmd: RDGK? 2
+get_cmd: RDGK? 2
 
 [Resistance 2]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 2
+state_value_1: True
+group: Ch 2
+get_cmd: RDGR? 2
+
+[Quick Resistance 2]
 datatype: DOUBLE
 permission: READ
 unit: Ohm
@@ -639,14 +657,14 @@ state_quant: Show Ch 3
 state_value_1: True
 group: Ch 3
 
-[Quick temperature 3]
+[Quick Temperature 3]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 3
 state_value_1: True
 group: Ch 3
-# get_cmd: RDGK? 3
+get_cmd: RDGK? 3
 
 [Resistance 3]
 datatype: DOUBLE
@@ -655,6 +673,15 @@ unit: Ohm
 state_quant: Show Ch 3
 state_value_1: True
 group: Ch 3
+
+[Quick Resistance 3]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 3
+state_value_1: True
+group: Ch 3
+get_cmd: RDGR? 3
 
 [Excitation Power 3]
 datatype: DOUBLE
@@ -825,14 +852,14 @@ state_quant: Show Ch 4
 state_value_1: True
 group: Ch 4
 
-[Quick temperature 4]
+[Quick Temperature 4]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 1
 state_value_1: True
 group: Ch 4
-# get_cmd: RDGK? 4
+get_cmd: RDGK? 4
 
 [Resistance 4]
 datatype: DOUBLE
@@ -841,6 +868,15 @@ unit: Ohm
 state_quant: Show Ch 4
 state_value_1: True
 group: Ch 4
+
+[Quick Resistance 4]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 4
+state_value_1: True
+group: Ch 4
+get_cmd: RDGR? 4
 
 [Excitation Power 4]
 datatype: DOUBLE
@@ -1011,14 +1047,14 @@ state_quant: Show Ch 5
 state_value_1: True
 group: Ch 5
 
-[Quick temperature 5]
+[Quick Temperature 5]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 5
 state_value_1: True
 group: Ch 5
-# get_cmd: RDGK? 5
+get_cmd: RDGK? 5
 
 [Resistance 5]
 datatype: DOUBLE
@@ -1027,6 +1063,15 @@ unit: Ohm
 state_quant: Show Ch 5
 state_value_1: True
 group: Ch 5
+
+[Quick Resistance 5]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 5
+state_value_1: True
+group: Ch 5
+get_cmd: RDGR? 5
 
 [Excitation Power 5]
 datatype: DOUBLE
@@ -1197,14 +1242,14 @@ state_quant: Show Ch 6
 state_value_1: True
 group: Ch 6
 
-[Quick temperature 6]
+[Quick Temperature 6]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 6
 state_value_1: True
 group: Ch 6
-# get_cmd: RDGK? 6
+get_cmd: RDGK? 6
 
 [Resistance 6]
 datatype: DOUBLE
@@ -1213,6 +1258,15 @@ unit: Ohm
 state_quant: Show Ch 6
 state_value_1: True
 group: Ch 6
+
+[Quick Resistance 6]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 6
+state_value_1: True
+group: Ch 6
+get_cmd: RDGR? 6
 
 [Excitation Power 6]
 datatype: DOUBLE
@@ -1383,14 +1437,14 @@ state_quant: Show Ch 7
 state_value_1: True
 group: Ch 7
 
-[Quick temperature 7]
+[Quick Temperature 7]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 7
 state_value_1: True
 group: Ch 7
-# get_cmd: RDGK? 7
+get_cmd: RDGK? 7
 
 [Resistance 7]
 datatype: DOUBLE
@@ -1399,6 +1453,15 @@ unit: Ohm
 state_quant: Show Ch 7
 state_value_1: True
 group: Ch 7
+
+[Quick Resistance 7]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 7
+state_value_1: True
+group: Ch 7
+get_cmd: RDGR? 7
 
 [Excitation Power 7]
 datatype: DOUBLE
@@ -1569,14 +1632,14 @@ state_quant: Show Ch 8
 state_value_1: True
 group: Ch 8
 
-[Quick temperature 8]
+[Quick Temperature 8]
 datatype: DOUBLE
 permission: READ
 unit: K
 state_quant: Show Ch 8
 state_value_1: True
 group: Ch 8
-# get_cmd: RDGK? 8
+get_cmd: RDGK? 8
 
 [Resistance 8]
 datatype: DOUBLE
@@ -1585,6 +1648,15 @@ unit: Ohm
 state_quant: Show Ch 8
 state_value_1: True
 group: Ch 8
+
+[Quick Resistance 8]
+datatype: DOUBLE
+permission: READ
+unit: Ohm
+state_quant: Show Ch 8
+state_value_1: True
+group: Ch 8
+get_cmd: RDGR? 8
 
 [Excitation Power 8]
 datatype: DOUBLE
