Ugraded SQE_QSwitchBox for new Arduino Firmware

--- a/SQE_QSwitchBox/SQE_QSwitchBox.ini
+++ b/SQE_QSwitchBox/SQE_QSwitchBox.ini
@@ -96,19 +96,24 @@ error_bit_mask: 255
 [Path]
 datatype: DOUBLE
 high_lim: 6
-low_lim: 0
-def_value: 0
-set_cmd: BOTH <*>
-get_cmd: BOTH?
-tooltip: selecting 0 is equivalent to resetting
+low_lim: 1
+def_value: 1
+set_cmd: SWITCHPOS <*>
+permission: WRITE
 
 [Delay]
 datatype: DOUBLE
 def_value: 20
 unit: ms
 set_cmd: DEL <*>
-get_cmd: DEL?
+permission: WRITE
 
 [Reset]
 datatype: BUTTON
-set_cmd: *RST
+set_cmd: SWITCHRESET
+permission: WRITE
+
+[IDN]
+datatype: STRING
+get_cmd: *IDN?
+permission: READ
