Added Path 0 position (FIRMWARE updated)

--- a/SQE_QSwitchBox/SQE_QSwitchBox.ini
+++ b/SQE_QSwitchBox/SQE_QSwitchBox.ini
@@ -96,10 +96,10 @@ error_bit_mask: 255
 [Path]
 datatype: DOUBLE
 high_lim: 6
-low_lim: 1
-def_value: 1
+low_lim: 0
+def_value: 0
 set_cmd: SWITCHPOS <*>
-permission: WRITE
+get_cmd: *SWITCHPOS?
 
 [Delay]
 datatype: DOUBLE
